BJS2-57878 refactoring findUniquePairs().